[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/grav selector button.png" type="Texture" id=1]
[ext_resource path="res://assets/grav selector button hover.png" type="Texture" id=2]
[ext_resource path="res://assets/grav selector button pressed.png" type="Texture" id=3]
[ext_resource path="res://GravitySelector.gd" type="Script" id=4]

[node name="GravitySelector" type="Control"]
anchor_right = 0.108
anchor_bottom = 0.138
margin_right = 0.407997
margin_bottom = 0.199997
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Up" type="TextureButton" parent="."]
anchor_bottom = 0.052
margin_left = 46.0
margin_top = -0.25
margin_right = 846.0
margin_bottom = 595.434
rect_scale = Vector2( 0.137804, 0.137804 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="TextureButton" parent="."]
anchor_right = 0.108
anchor_bottom = 0.138
margin_left = 176.5
margin_top = 23.5
margin_right = 964.512
margin_bottom = 612.046
rect_rotation = 89.9999
rect_scale = Vector2( 0.137804, 0.137804 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Down" type="TextureButton" parent="."]
anchor_right = 0.108
anchor_bottom = 0.138
margin_left = 153.5
margin_top = 156.5
margin_right = 941.512
margin_bottom = 745.046
rect_rotation = 180.0
rect_scale = Vector2( 0.137804, 0.137804 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="TextureButton" parent="."]
anchor_right = 0.108
anchor_bottom = 0.138
margin_left = 22.0
margin_top = 132.0
margin_right = 810.012
margin_bottom = 720.546
rect_rotation = -89.9999
rect_scale = Vector2( 0.137804, 0.137804 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Up" to="." method="_on_Up_pressed"]
[connection signal="pressed" from="Right" to="." method="_on_Right_pressed"]
[connection signal="pressed" from="Down" to="." method="_on_Down_pressed"]
[connection signal="pressed" from="Left" to="." method="_on_Left_pressed"]
